<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent" >

        <TableRow
            android:id="@+id/tableRowAlphabetInfo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/imageViewAlphabetInfo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_information" />

            <TextView
                android:id="@+id/textViewAlphabetInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:textSize="30sp"
                android:text="@string/alphabet_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/Black" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowShareAlphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/imageViewShareAlphabet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_sharealphabets" />

            <TextView
                android:id="@+id/textViewShareAlphabets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/share_alphabets"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/Black"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowSaveAlphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/imageViewSaveAlphabet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_save" />

            <TextView
                android:id="@+id/textViewSaveAlphabet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/save_alphabet"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/Black"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowWritePostCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/imageViewWritePostCard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_sharepostcard" />

            <TextView
                android:id="@+id/textViewWritePostCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/write_postcard"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/Black"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowMyAlphabets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/White" >

            <ImageView
                android:id="@+id/imageViewMyAlphabets"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_post_card" />

            <TextView
                android:id="@+id/textViewMyAlphabet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_alphabets"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColorHint="@color/Black"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:src="@drawable/btn_crop_operator"
                android:text="@string/cancel_button"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>